# reportBi

./: CLAUDE.md  README.md  config.yaml  prd.md  pyproject.toml
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  analysis_agent.py  debug_agent.py  prompt_rewriting_agent.py  query_agent.py  report_generation_agent.py
app/api/: __init__.py  routes.py  tools.py
app/schemas/: __init__.py  block.py  data_part.py  report.py  template.py  tool.py
app/tools/: __init__.py  chart_generator.py  embedding.py  vector_store.py
openspec/changes/archive/2026-04-03-smart-report-bi/: design.md  tasks.md
openspec/changes/archive/2026-04-03-smart-report-bi/specs/chart-generator/: spec.md
openspec/changes/archive/2026-04-03-smart-report-bi/specs/debug-mode/: spec.md
openspec/changes/archive/2026-04-03-smart-report-bi/specs/report-block/: spec.md
openspec/changes/smart-report-bi/: proposal.md
openspec/changes/smart-report-bi/specs/data-part/: spec.md
openspec/changes/smart-report-bi/specs/prompt-rewriting-agent/: spec.md
openspec/changes/smart-report-bi/specs/report-template/: spec.md
openspec/changes/smart-report-bi/specs/tool-registry/: spec.md
tests/: test_api.py  test_chart_generator.py  test_schemas.py
